[gd_scene load_steps=14 format=3 uid="uid://d1mo2i6mo3cgg"]

[ext_resource type="Script" path="res://scripte/four.gd" id="1_kq4bx"]
[ext_resource type="Texture2D" uid="uid://dgt02qjl731x7" path="res://image/machines/four/foure_vide.png" id="2_rys37"]
[ext_resource type="Texture2D" uid="uid://bvc32jw7cvhi5" path="res://image/machines/etagere/ecran_selection/icone.png" id="3_5g72d"]
[ext_resource type="Script" path="res://scripte/area_fer.gd" id="3_m2xou"]
[ext_resource type="Texture2D" uid="uid://bjhlh0ihlwb8c" path="res://image/machines/etagere/ecran_selection/icone_validation.png" id="4_cxtqs"]
[ext_resource type="Texture2D" uid="uid://ddo80lkfru72g" path="res://image/craft/ressource_premiere/fer.png" id="4_n0lr5"]
[ext_resource type="Texture2D" uid="uid://dcldljwtlrsib" path="res://image/craft/ressource_premiere/charbon.png" id="5_fb3oi"]
[ext_resource type="Script" path="res://scripte/area_charbon.gd" id="6_jno3j"]
[ext_resource type="Script" path="res://scene/area_validation.gd" id="8_i3kba"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7tuhp"]
size = Vector2(128, 127)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_tqqfs"]
size = Vector2(42, 42)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_bm0jr"]
size = Vector2(40, 42)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7u4ei"]
size = Vector2(41, 42)

[node name="four" type="Area2D"]
script = ExtResource("1_kq4bx")

[node name="Sprite_four" type="Sprite2D" parent="."]
texture = ExtResource("2_rys37")

[node name="area_four" type="CollisionShape2D" parent="."]
position = Vector2(0, 32.5)
shape = SubResource("RectangleShape2D_7tuhp")
debug_color = Color(0.94431, 6.73831e-06, 0.597658, 0.42)

[node name="craft_canvas" type="CanvasGroup" parent="."]
visible = false

[node name="area_fer" type="Area2D" parent="craft_canvas"]
script = ExtResource("3_m2xou")
metadata/_edit_group_ = true

[node name="icone_item_fer" type="Sprite2D" parent="craft_canvas/area_fer"]
position = Vector2(-35, -128)
texture = ExtResource("3_5g72d")

[node name="icone_fer" type="Sprite2D" parent="craft_canvas/area_fer/icone_item_fer"]
visible = false
scale = Vector2(0.5, 0.5)
texture = ExtResource("4_n0lr5")

[node name="zone_fer" type="CollisionShape2D" parent="craft_canvas/area_fer"]
position = Vector2(-35, -128)
shape = SubResource("RectangleShape2D_tqqfs")
debug_color = Color(0.326844, 0.623808, 0, 0.42)

[node name="area_charbon" type="Area2D" parent="craft_canvas"]
script = ExtResource("6_jno3j")
metadata/_edit_group_ = true

[node name="icone_item_charbon" type="Sprite2D" parent="craft_canvas/area_charbon"]
position = Vector2(33, -128)
texture = ExtResource("3_5g72d")

[node name="icone_charbon" type="Sprite2D" parent="craft_canvas/area_charbon/icone_item_charbon"]
visible = false
scale = Vector2(0.5, 0.5)
texture = ExtResource("5_fb3oi")

[node name="zone_charbon" type="CollisionShape2D" parent="craft_canvas/area_charbon"]
position = Vector2(33, -128)
shape = SubResource("RectangleShape2D_bm0jr")
debug_color = Color(0.326844, 0.623808, 0, 0.42)

[node name="area_validation" type="Area2D" parent="craft_canvas"]
visible = false
position = Vector2(0, -76)
script = ExtResource("8_i3kba")
metadata/_edit_group_ = true

[node name="IconeValidation" type="Sprite2D" parent="craft_canvas/area_validation"]
position = Vector2(0, 0.5)
texture = ExtResource("4_cxtqs")

[node name="zone_validation" type="CollisionShape2D" parent="craft_canvas/area_validation"]
position = Vector2(0, -0.5)
shape = SubResource("RectangleShape2D_7u4ei")
debug_color = Color(0.326844, 0.623808, 0, 0.42)

[connection signal="input_event" from="craft_canvas/area_fer" to="." method="_on_area_fer_input_event"]
[connection signal="mouse_entered" from="craft_canvas/area_fer" to="craft_canvas/area_fer" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="craft_canvas/area_fer" to="craft_canvas/area_fer" method="_on_mouse_exited"]
[connection signal="input_event" from="craft_canvas/area_charbon" to="." method="_on_area_charbon_input_event"]
[connection signal="mouse_entered" from="craft_canvas/area_charbon" to="craft_canvas/area_charbon" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="craft_canvas/area_charbon" to="craft_canvas/area_charbon" method="_on_mouse_exited"]
[connection signal="mouse_entered" from="craft_canvas/area_validation" to="craft_canvas/area_validation" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="craft_canvas/area_validation" to="craft_canvas/area_validation" method="_on_mouse_exited"]
